--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     compile fileTree(dir: 'lib', include: '**/*.jar')
     compile "io.springfox:springfox-swagger2:2.+"
     compile "io.springfox:springfox-swagger-ui:2.+"
+    
+    compile name: 'burpsuite_pro'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.apache.httpcomponents:httpclient:4.5.2')
