--- a/build.gradle
+++ b/build.gradle
@@ -79,9 +79,9 @@ dependencies {
     implementation "io.springfox:springfox-swagger2:2.+"
     implementation "io.springfox:springfox-swagger-ui:2.+"
     implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '2.3.3'
-    compileOnly "net.portswigger.burp.extender:burp-extender-api:1.7.22"
+    compileOnly "net.portswigger.burp.extender:burp-extender-api:2.+"
 
-    entrypointCompileOnly "net.portswigger.burp.extender:burp-extender-api:1.7.22"
+    entrypointCompileOnly "net.portswigger.burp.extender:burp-extender-api:2.+"
 
     testImplementation fileTree(dir: 'lib', include: '**/*.jar')
     testImplementation('org.springframework.boot:spring-boot-starter-test:2.2.6.RELEASE')
@@ -142,6 +142,11 @@ task schemagen () {
 			}
 		}
 	}
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:deprecation'
+    options.deprecation = true
 }
 
 compileJava.dependsOn createschemaTargetDir
